--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.6.0
+  mongo_dart: ^0.8.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -35,18 +36,18 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets: 
+  assets:
     - assets/images/
-  fonts: 
+  fonts:
     - family: Lato
-      fonts: 
-      - asset: assets/fonts/Lato/Lato-100.ttf
-        weight: 100
-      - asset: assets/fonts/Lato/Lato-300.ttf
-        weight: 300
-      - asset: assets/fonts/Lato/Lato-400.ttf
-        weight: 400
-      - asset: assets/fonts/Lato/Lato-700.ttf
-        weight: 700
-      - asset: assets/fonts/Lato/Lato-900.ttf
-        weight: 900
+      fonts:
+        - asset: assets/fonts/Lato/Lato-100.ttf
+          weight: 100
+        - asset: assets/fonts/Lato/Lato-300.ttf
+          weight: 300
+        - asset: assets/fonts/Lato/Lato-400.ttf
+          weight: 400
+        - asset: assets/fonts/Lato/Lato-700.ttf
+          weight: 700
+        - asset: assets/fonts/Lato/Lato-900.ttf
+          weight: 900
