--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,12 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.4.0
+  firebase_storage: ^11.0.8
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.6.0
+  image_picker: ^0.8.6
   mongo_dart: ^0.8.0
 
 dev_dependencies:
