--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.6.0
+  get: ^4.6.5
   image_picker: ^0.8.6
   mongo_dart: ^0.8.0
 
